----------------------------------------------------------------------
 OmegaT 5.5.0
----------------------------------------------------------------------
  10 Enhancements
  3 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.5.0 vs 5.4.3

  Bug fixes:

  - External opening/browsing not supported on some Linux environments
  https://sourceforge.net/p/omegat/bugs/999/

  - project_stats.txt overwritten with garbage when opening Statistics window
  https://sourceforge.net/p/omegat/bugs/1035/

  - SVN team project files disappear: File deletions are now correctly handled
  for SVN repos.
  https://sourceforge.net/p/omegat/bugs/1036/

  Implemented requests:

  - Joomla language files support
  https://sourceforge.net/p/omegat/feature-requests/1328/

  - Alternative layout for glossary pane
  https://sourceforge.net/p/omegat/feature-requests/1386/

  - Improve access speed for uncompressed StarDict dictionaries
  https://sourceforge.net/p/omegat/feature-requests/1532/

  - Make glossary colors customizable
  https://sourceforge.net/p/omegat/feature-requests/1537/

  - Glossary layout plugin system
  https://sourceforge.net/p/omegat/feature-requests/1538/

  - Add repository name to credentials dialog in team projects
  https://sourceforge.net/p/omegat/feature-requests/1539/

  - Add plain text translation option to Yandex.Cloud
  https://sourceforge.net/p/omegat/feature-requests/1550/

  - INI Filter: extract continuation lines for multi-line values
  https://sourceforge.net/p/omegat/feature-requests/1554/

  - Add rudimentary support for dir attribute modification in HTML
  https://sourceforge.net/p/omegat/feature-requests/1556/

  - Recognize glossaries with TSV extension
  https://sourceforge.net/p/omegat/feature-requests/1557/

----------------------------------------------------------------------
 OmegaT 5.4.3 (2021-03-27)
----------------------------------------------------------------------