@@ -2179,6 +2179,7 @@ APERTIUM_CUSTOM_SERVER_URL_LABEL=Custom server URL
 APERTIUM_CUSTOM_SERVER_KEY_LABEL=API Key (optional)
 APERTIUM_CUSTOM_SERVER_NOTFOUND=Unable to connect to server. Ensure the server URL is correct.
 APERTIUM_CUSTOM_SERVER_INVALID=The server is not a valid Apertium server. Ensure the URL is correct.
+APERTIUM_MARKUNKNOWN_LABEL=Mark unknown words
 
 MT_ENGINE_GOOGLE2_API_KEY_LABEL=API Key:
 MT_ENGINE_GOOGLE2_PREMIUM_LABEL=Premium Edition
